# mat

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/: CONFIGURATION.md  CONTRIBUTING.md  INSTALL.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md
examples/: code.md  gen_demo_images.rs  images.md  links.md  showcase.md  tables.md  typography.md
examples/screenshots/: capture-still.sh  record.sh
src/: config.rs  format.rs  image.rs  lib.rs  main.rs  markdown.rs  process.rs  renderer.rs  resolve.rs  sanitize.rs  state.rs  style.rs  terminal.rs  utils.rs
tests/: config.test.rs  format.test.rs  image.test.rs  main.test.rs  markdown.test.rs  process.test.rs  renderer.test.rs  resolve.test.rs  sanitize.test.rs  state.test.rs  style.test.rs  terminal.test.rs  utils.test.rs
tests/common/: mod.rs
